# src/lib/requests_bodies/LoginRequestBody.ts
@@ -1,0 +1,4 @@
+export default interface LoginRequestBody {
+  email: string;
+  password: string;
+}
