# src/lib/requests_bodies/UserCreationRequestBody.ts
@@ -1,0 +1,6 @@
+export default interface UserCreationRequestBody {
+  firstName: string;
+  lastName: string;
+  email: string;
+  password: string;
+}
